Add Column Transformations, Relation Transformations and Type Mapping